--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Trying out Git</h1>
+    <h1>Trying out Git!!!</h1>
     <p>
       I learnt the basics of git and github. How to push and pull, and merge
       codes.
     </p>
+    <strong>Warning!</strong> Represents a warning that needs attention.</br>
+    <strong>Danger!</strong> Represents a dangerous negative action.</br>
   </body>
 </html>
